feat: 레디스 고도화