@@ -6,6 +6,7 @@ import org.ozea.ai.dto.SummaryReq;
 import org.ozea.ai.service.OpenAISummarizeService;
 import org.ozea.common.dto.ApiResponse;
 import org.ozea.common.exception.ErrorCode;
+import org.ozea.common.limiter.RateLimiter;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -16,20 +17,25 @@ import org.springframework.web.bind.annotation.*;
 public class AiController {
 
     private final OpenAISummarizeService summarizeService;
+    private final RateLimiter rateLimiter;
 
     @PostMapping("/summarize")
-    public ResponseEntity<ApiResponse<String>> summarize(@RequestBody SummaryReq req) {
-        if (req == null || req.getText() == null || req.getText().trim().isEmpty()) {
-            return ResponseEntity.badRequest()
-                    .body(ApiResponse.error(ErrorCode.INVALID_INPUT, "요약할 텍스트가 비어있습니다."));
+    public ResponseEntity<ApiResponse<String>> summarize(@RequestBody SummaryReq req,
+                                                         @org.springframework.security.core.annotation.AuthenticationPrincipal Object me) {
+        String uid = (me != null) ? me.toString() : "anon";
+        String bucket = java.time.LocalDateTime.now().format(java.time.format.DateTimeFormatter.ofPattern("yyyyMMddHHmm"));
+        String key = "rl:ai:" + uid + ":" + bucket;
+        if (!rateLimiter.allow(key, java.time.Duration.ofMinutes(1), 20)) {
+            return ResponseEntity.status(429).body(ApiResponse.error(ErrorCode.TOO_MANY_REQUESTS, "요청이 너무 많습니다."));
+        }
+        if (req == null || req.getText() == null || req.getText().isBlank()) {
+            return ResponseEntity.badRequest().body(ApiResponse.error(ErrorCode.INVALID_INPUT, "요약할 텍스트가 비어있습니다."));
         }
         try {
             String summary = summarizeService.summarizeTo3Lines(req.getText());
             return ResponseEntity.ok(ApiResponse.success(summary, "요약 성공"));
         } catch (Exception e) {
-            log.error("요약 실패: {}", e.getMessage());
-            return ResponseEntity.status(502) // Bad Gateway 성격
-                    .body(ApiResponse.error(ErrorCode.EXTERNAL_API_ERROR, "OpenAI 요약 실패"));
+            return ResponseEntity.status(502).body(ApiResponse.error(ErrorCode.EXTERNAL_API_ERROR, "OpenAI 요약 실패"));
         }
     }
 }
